@@ -10,6 +10,7 @@ SVN
     * Made client management more intuitive by adding a "Clients" menu.
     * Made main window menus more intuitive.
     * Added ability to remove the "WU Info" panel from view.
+    * Updated queue structure to qd FR 069
 
     Linux
 
